# projects_page

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
pages/templates/pages/: home.html
portfolio_project/: dev_settings.py  settings.py  urls.py
projects/: models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_image.py  0003_alter_project_options_remove_project_technology_and_more.py  0004_remove_project_documentation_link_and_more.py  0005_rename_image_project_project_image_and_more.py  0006_project_powerbi_iframe_url.py  0007_project_powerbi_description.py
projects/static/projects/css/: index_picture.css  markdown.css
projects/templates/projects/: project_detail.html  project_index.html  project_pbi_live.html
templates/: base.html
