[project]
name = "projects-page"
version = "0.1.0"
description = ""
authors = [
    {name = "jakub"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "django-markdownify (>=0.9.5,<0.10.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false